Fix visibility of project columns when searching

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -46,9 +46,6 @@ main[data-page-id='projects'] {
   display: inline-flex;
   flex-direction: column;
   width: calc(50% - 30px);
-  &:empty {
-    display: none;
-  }
   @include layout(hybrid) {
     display: block;
     width: auto;
